# nos

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
boot/: Makefile  boot.s  linker.ld
boot/grub/: grub.cfg
doc/: README.md
docs/: README.md
docs/doxygen/: Doxyfile
drivers/: keyboard.cpp  pit.cpp  timer.cpp  vbe.cpp
fs/: initrd.cpp  vfs.cpp
gfx/: framebuffer.cpp  gfx.cpp  graphics.cpp  vbefont.cpp
grub/: grub.cfg
include/asm/: io.h  system.h
include/kernel/: gdt.h  icxxabi.hpp  idt.h  irq.h  kernel.h  kernel.hpp  keyboard.h  kheap.hpp  klog.hpp  kmalloc.h  login.hpp  memlayout.hpp  mm.h  mm.hpp  multiboot.h  multiboot.hpp  pmm.h  pmm.hpp  ports.h  sstd.h  terminal.hpp  timer.h  tty.h  tty.hpp  tty_printf.h  version.hpp  vga.h  vmm.h  vmm.hpp
include/libc/: ctype.h  math.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
include/libk/: math.h  memory.h  stdarg.h  stddef.h  stdint.h  stdlib.h  string.h
include/nos/: bitset.hpp  byte.hpp  ctype.h  ctype.hpp  errno.h  errno.hpp  exe.h  ext2.h  fcntl.h  fcntl.hpp  gdt.h  gdt.hpp  gfx.h  gfx.hpp  idt.h  idt.hpp  initrd.h  initrd.hpp  irq.h  irq.hpp  kernel.h  mm.h  (+51 more)
kernel/: Makefile  gdt.c  gdt_flush.s  idt.c  idt_flush.s  irq.c  kernel.c  kernel.cpp  kernel_common.mk  kprintf.c  linker.ld  nosstd.c  panic.c  ports.c  printk.c  sstd.c  timer.c  tty.c  unistd.c  version.cpp  vga.c
lib/: Makefile
libc/: Makefile  libc_common.mk
src/: config.rs  lib.rs  log.rs  multiboot.rs
targets/: grub.cfg
usr/: Makefile
(+299 files in other folders)
