# Project name: NOS (Null Operating System).
# Description: Monolithic UNIX-like operating system.
# Licence: GPL-3.0.
# Author: Alexander (@alkuzin).

# Project package info section.
[package]
name        = "nos"
description = "Monolithic UNIX-like operating system"
version     = "0.1.2"
authors     = ["Alexander (GitHub: @alkuzin)"]
repository  = "https://github.com/alkuzin/nos"
license     = "GPL-3"
edition     = "2024"

# Project library settings section.
[lib]
# Compile project to a static library.
crate-type = ["staticlib"]

# Development profile configuration section.
[profile.dev]
# Abort immediately instead of unwinding on panic.
panic = "abort"

# Release profile configuration section.
[profile.release]
# Abort immediately instead of unwinding on panic.
panic = "abort"

# Project dependencies section.
[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
spin        = "0.10.0"

# Project features section.
[features]
# Kernel custom testing framework feature.
ktest = []